# Diabetes-Diagnosis

./: .gitignore  CMakeLists.txt  README.md
server/: cbr_knn.py  main.py  protocol.py
src/: bmi.h  main.cpp  user.h
src/message/: payload.h  protocol.h
src/ui/: diagnosis_result.cpp  diagnosis_result.h  diagnosis_result.ui  main_window.cpp  main_window.h  main_window.ui  opening.cpp  opening.h  opening.ui
testing/: KNN.ipynb
